discussion/kv_engine/135376/135376_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-41095: Move definition of DCP end-stream status code

The status code is moved from ep-engine code into memcached
protocol (and modernised with enum class)

Change-Id: If1720a0fbe28475d361e9f45cc8d9235e7ab18d9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-09-01 15:16:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-01 15:53:29.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4121/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer.cc:1701:58: error: no member named "DISCONNECTED" in "cb::mcbp::DcpStreamEndStatus" [clang-diagnostic-error]
                                                         DISCONNECTED);
                                                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4121/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/producer.cc:1701:58:
error: no member named "DISCONNECTED" in "cb::mcbp::DcpStreamEndStatus" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4121/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29923/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\dcp\producer.cc(1701): error C2838: "DISCONNECTED": illegal qualified name in member declaration ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29923/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25942/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/producer.cc:1701:58:
error: no member named "DISCONNECTED" in "cb::mcbp::DcpStreamEndStatus"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25942/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5547/ : FAILURE

Compile error at [2020-09-01T15:51:04.385Z] ../kv_engine/engines/ep/src/dcp/producer.cc:1701:58:
error: ?DISCONNECTED? is not a member of ?cb::mcbp::DcpStreamEndStatus?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5547/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5436/ : FAILURE

Compile error at [2020-09-01T15:47:04.489Z] ../kv_engine/engines/ep/src/dcp/producer.cc:1701:58:
error: ?DISCONNECTED? is not a member of ?cb::mcbp::DcpStreamEndStatus?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5436/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13257/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4455/ : FAILURE

Compile error at [2020-09-01T15:21:32.633Z] ../kv_engine/engines/ep/src/dcp/producer.cc:1701:58:
error: no member named "DISCONNECTED" in "cb::mcbp::DcpStreamEndStatus"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4455/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5343/ : FAILURE

Compile error at [2020-09-01T15:48:37.841Z] ../kv_engine/engines/ep/src/dcp/producer.cc:1701:58:
error: ?DISCONNECTED? is not a member of ?cb::mcbp::DcpStreamEndStatus?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5343/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2645/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
